--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -57,7 +57,7 @@
       }
       .bounty-text {
         font-size: 0.9rem;
-        color: #ffdb66;
+        color: #ffffff;
       }
       .instructions {
         max-width: 650px;
@@ -401,49 +401,49 @@
             <!-- Example cluster fields. IDs will be updated via JS. -->
             <tr>
               <td><strong>Total % in active clusters:</strong></td>
-              <td><span id="activeClusterPercent">No Data</span></td>
+              <td><span id="activeClusterPercent">N/A</span></td>
             </tr>
             <tr>
               <td><strong># of wallets in cluster 1:</strong></td>
-              <td><span id="cluster1Wallets">No Data</span></td>
+              <td><span id="cluster1Wallets">N/A</span></td>
             </tr>
             <tr>
               <td><strong>% active in cluster 1:</strong></td>
-              <td><span id="cluster1Percent">No Data</span></td>
+              <td><span id="cluster1Percent">N/A</span></td>
             </tr>
             <tr>
               <td><strong># of wallets in cluster 2:</strong></td>
-              <td><span id="cluster2Wallets">No Data</span></td>
+              <td><span id="cluster2Wallets">N/A</span></td>
             </tr>
             <tr>
               <td><strong>% active in cluster 2:</strong></td>
-              <td><span id="cluster2Percent">No Data</span></td>
+              <td><span id="cluster2Percent">N/A</span></td>
             </tr>
             <tr>
               <td><strong># of wallets in cluster 3:</strong></td>
-              <td><span id="cluster3Wallets">No Data</span></td>
+              <td><span id="cluster3Wallets">N/A</span></td>
             </tr>
             <tr>
               <td><strong>% active in cluster 3:</strong></td>
-              <td><span id="cluster3Percent">No Data</span></td>
+              <td><span id="cluster3Percent">N/A</span></td>
             </tr>
             
             <tr>
               <td><strong># of wallets in cluster 4:</strong></td>
-              <td><span id="cluster4Wallets">No Data</span></td>
+              <td><span id="cluster4Wallets">N/A</span></td>
             </tr>
             <tr>
               <td><strong>% active in cluster 4:</strong></td>
-              <td><span id="cluster4Percent">No Data</span></td>
+              <td><span id="cluster4Percent">N/A</span></td>
             </tr>
 
             <tr>
               <td><strong># of wallets in cluster 5:</strong></td>
-              <td><span id="cluster5Wallets">No Data</span></td>
+              <td><span id="cluster5Wallets">N/A</span></td>
             </tr>
             <tr>
               <td><strong>% active in cluster 5:</strong></td>
-              <td><span id="cluster5Percent">No Data</span></td>
+              <td><span id="cluster5Percent">N/A</span></td>
             </tr>
           </tbody>
         </table>
@@ -473,7 +473,7 @@
             <canvas id="clusterChart"></canvas>
           </div>
           <div class="chart-stat">
-            Active Holding: <strong id="activeHoldingStat">No Data</strong>
+            Active Holding: <strong id="activeHoldingStat">N/A</strong>
           </div>
         </div>
       </div>
