cluster datafields changed

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -388,7 +388,7 @@
       <img src="images/logo.gif" alt="Dragon" class="dragon-image" />
       <h1 class="project-title">Project: Dragon</h1>
       <h2 class="module-title">Module: Cluster Analysis</h2>
-      <p class="bounty-text">Bounty: 0.10% of $DRAGON supply</p>
+      <p class="bounty-text">Bounty: 0.1% of $DRAGON supply</p>
       <p class="instructions">
         Please paste an SPL token contract address in the field provided
         to test the functionality of your code. Your data outputs are
@@ -412,6 +412,9 @@
         </table>
         <br>
         <h2>Metadata</h2>
+
+        <!-- In the metadata we have to get all the clusters including active and non-active -->
+        <!-- Although in the chart we will consider only active clusters -->
         <table>
           <tbody>
             <tr>
@@ -434,7 +437,7 @@
               <td><strong># of wallets in cluster 3:</strong></td>
               <td><span id="cluster3Wallets">N/A</span></td>
             </tr>
-            <tr>
+            <!-- <tr>
               <td><strong>% active in cluster 3:</strong></td>
               <td><span id="cluster3Percent">N/A</span></td>
             </tr>
@@ -454,7 +457,7 @@
             </tr>
             <tr>
               <td><strong>% active in cluster 5:</strong></td>
-              <td><span id="cluster5Percent">N/A</span></td>
+              <td><span id="cluster5Percent">N/A</span></td> -->
             </tr>
           </tbody>
         </table>
